test layout shift issue

--- a/assets/scss/import.scss
+++ b/assets/scss/import.scss
@@ -4,8 +4,7 @@ $secondary: black;
     background-color: $secondary;
 }
 
-$hero-body-padding-medium: 6rem 1.5rem;
-$section-padding-medium: 6rem 1.5rem;
+
 
 /*! bulma.io v0.9.1 | MIT License | github.com/jgthms/bulma */
 @import "sass/utilities/_all";
